--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -614,6 +614,7 @@ and the \textbf{.cls} and \textbf{.tex} files that it describes.
 % produce the bibliography for the citations in your paper.
 \bibliographystyle{abbrv}
 \bibliography{sigproc}  % sigproc.bib is the name of the Bibliography in this case
+\nocite{*} %auto einai gia na bgazei to reference xwris na xreiazetai na to kanoume cite kapou.
 % You must have a proper ".bib" file
 %  and remember to run:
 % latex bibtex latex latex
