--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -291,6 +291,13 @@ In order for the above technique to work, a proper drop value has to be set. Thi
 
 At the end of this procedure, the terms ranked before the critical drop are defined as news on the specified time interval.
 
+\subsubsection{Clustering}
+The goal of clustering techniques is to group news tweets such that each group contains tweets about a specific news topic. This problem is similar to clustering documents with the main difference that the identity of news topics is not known beforehand \cite{Sankaranarayanan2009TwitterStandNI}. This problem cannot be approached by static training sets, as news evolve over time in a random fashion. A clustering approach, presented by \cite{Sankaranarayanan2009TwitterStandNI}, goes as follows: Once a tweet arrives, it is added to a news cluster and remains there forever. This techniques allows for fast processing since tweets arrive at huge rates. This makes the algorithm online. Specifically, an algorithm called leader-follower clustering has been modified and used, which allowed for clustering both in content and time. Along with the clusters, a weighted list of keywords of each tweet is kept. Time is also an important aspect in this procedure: Timestamps are kept and can render a cluster inactive if its centroid is older than a specified threshold. In this case the cluster is locked and new tweets cannot be added. 
+\par
+Noise can greatly affect clustering techniques. Care should be taken when creating new clusters to ensure they are of good quality. A good way to ensure high quality is to only allow the creation of clusters by influential users with many followers \cite{Sankaranarayanan2009TwitterStandNI}. All tweets from other users should be able to join a cluster but not create one. Unfortunately, this approach might prevent news registration for cases where simple users report an incident first. A way to combat this situation effectively is to allow cluster creation by users, but only activate a cluster after a certain amount of tweets has been added to it, thus making the topic news-worthy \cite{Sankaranarayanan2009TwitterStandNI}.
+
+\subsubsection{A different approach on Clustering}
+As \cite{cataldi2013personalized} states, many clustering and classification strategies cannot by applies to this task due to the fact that they tend to ignore relationships among documents(tweets) related to a news event. \cite{cataldi2013personalized} proposes a metaphor where each term is seen as a living organism: A term's vitality status increases as users use it, and slowly degrades as references drop over time. The term's vitality is weighted based on the source of the tweet. As stated before, highly influential users are more likely to post high-importance news, hence allowing us to favour terms found in their tweets.
 
 \section{Conclusions}
 %\end{document}  % This is where a 'short' article might terminate
